# D5.10

./: README.md  pyproject.toml  requirements.txt
my_site/: data.xml  db.sqlite3
my_site/common/: adapter.py  urls.py
my_site/my_site/: settings.py  urls.py
my_site/p_library/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
my_site/p_library/migrations/: 0001_initial.py  0002_auto_20210211_1552.py  0003_auto_20210223_1457.py  0004_auto_20210228_1419.py  0005_auto_20210314_1443.py  0006_auto_20210411_0351.py
my_site/static/css/: main.css
my_site/templates/: author_detail.html  authors.html  base.html  book_add.html  book_add_full.html  book_detail.html  book_send.html  friend_detail.html  friends.html  index.html  item_add.html  publisher_detail.html  publishers.html
my_site/templates/account/: login.html  logout.html
